--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -28,7 +28,7 @@ height: 50px;
     height: 150px;
 } 
 #cel4{
-    background-color: blue;
+    background-color: rgb(18, 15, 193);
     color: white;
     width: 300px;
     height: 150px;
